--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="container">
         <div class="nav">
-            <a href="#">
+            <a href="./index.html">
                 <img src="https://img.icons8.com/android/24/000000/back.png"/>
             </a>
-            <h1>yunkyung-Lee💗</h1>
+            <span class="typing-txt">yunkyung-Lee💗</span>
         </div>
         <div class="profile">
             <div class="profile-des">
@@ -52,7 +52,7 @@
                 <dd>Front-end</dd>
             </div>
         </div>
-        <div class="grid">
+        <div class="content">
             <a href="./pages/about.html">
                 <div class="img-container">
                     <img src="./images/1.jpg" alt="">
